--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 /* CalTrain Red */
 /* rgb(217,91,99) */
+
 body {
+    /* Source: https://commons.wikimedia.org/wiki/File:Caltrain_904_Palo_Alto_locomotive_engine.jpg */
     background-image: url("../images/background.jpg");
     background-size: cover;
 }
@@ -11,7 +13,7 @@ body {
     display: block;
     height: 200px;
     width: 100%;
-    padding-top: 20px;
+    padding-top: 50px;
     margin-top: 0;
     margin-bottom: 2rem;
     border-radius: 3rem;
