add modal to HTML and conditional to JS logic to alert user if input fields are empty upon submission; style modal header to CalTrain red

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,3 +73,8 @@ h1 {
     display: inline-block;
     width: 20%; /* 1/5 = 20% */
 }
+
+.modal-header-adjust {
+    background-image: none;
+    background-color: rgb(217,91,99);
+}
